<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/avatar_chat_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMessageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/adrew"
        android:textColor="#000000"
        app:fontFamily="@font/satisfy"
        app:layout_constraintLeft_toRightOf="@+id/avatarImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/left_message_shape"
        android:maxWidth="280dp"
        android:padding="8dp"
        android:text="@string/test_text_here"
        android:textColor="@color/whiteText"
        android:textSize="15sp"
        app:fontFamily="@font/buenard"
        app:layout_constraintLeft_toRightOf="@+id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessageName" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        app:fontFamily="@font/buenard"
        android:text="@string/test_day_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />
</android.support.constraint.ConstraintLayout>