<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ChatDialogActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person_white_24dp"
            app:civ_border_color="#b52a62"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/toolBar_title"
            style="@style/ToolBar_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/toolbar_text"
            app:fontFamily="@font/pacifico" />

    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/listViewMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/enter_message_editText_dialog"
            android:inputType="textCapSentences"
            android:maxLines="6" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/enter_button_dialog"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:fontFamily="@font/buenard_bold" />
    </LinearLayout>

</LinearLayout>